changed transform of the search button and margin of the upload button to avoid the search button hidden behind cards in site.css.

--- a/src/wwwroot/css/site.css
+++ b/src/wwwroot/css/site.css
@@ -45,7 +45,7 @@ body {
 .search-box{
     position: absolute;
     left: 50%;
-    transform: translate(-50%, -50%);
+    transform: translate(-50%, -120%);
     background: #2f3640;
     height: 50px;
     border-radius: 50px;
@@ -550,7 +550,8 @@ ul {
     background-color: mediumseagreen;
     border-radius: 20px;
     display: inline-block;
-    margin-bottom:10px;
+    margin-top: 1.5%;
+    margin-bottom:1.5%;
 }
 
 .upload-btn:hover {
